# python_mipt_dafe_tasks

./: .coverage  .gitignore  README.md  pyproject.toml  requirements-ci.txt
.github/workflows/: check-solutions.yaml
conditions/lesson04/: tasks.md
conditions/lesson05/: tasks.md
conditions/lesson06/: tasks.md
conditions/lesson08/: tasks.md
conditions/lesson11/: task.md
conditions/lesson12/: task.md
conditions/sem02/lesson03/: tasks.md
conditions/sem02/lesson04/: tasks.md
conditions/sem02/lesson05/: tasks.md
conditions/sem02/lesson07/: tasks.md
conditions/sem02/lesson08/: tasks.md
deprecated_tests/sem02/tests/: test_lesson03_tasks.py
homeworks/hw1/: aggregate_segmentation.py  backoff.py  cache.py  convert_exception.py  description.md
homeworks/sem01/hw1/: backoff.py
solutions/lesson02/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py
solutions/lesson03/: task1.py  task2.py  task3.py
solutions/lesson04/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
solutions/lesson05/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py
solutions/lesson06/: task1.py  task2.py  task3.py  task4.py
solutions/lesson08/: task1.py  task2.py
solutions/lesson11/: task1.py
solutions/lesson12/: task1.py  task2.py  task3.py
tests/: test_lesson02_tasks.py  test_lesson03_tasks.py  test_lesson04_tasks.py  test_lesson05_tasks.py  test_lesson06_tasks.py  test_lesson08_tasks.py  test_lesson11_tasks.py  test_lesson12_tasks.py
tests_hw/: test_hw1_tasks.py
tests_hw/hw1_test_data/: cache_test_data.py
(+35 files in other folders)
